# triposplat-cpu-avx512

./: .gitignore  LICENSE  README.md  README_ja.md  THIRD_PARTY_NOTICES.md  requirements.txt
dashboard/: .gitignore  README.md  pyproject.toml
dashboard/data/: seed.json  timeline.json
dashboard/docs/: privacy_maintenance_ja.md
dashboard/scripts/: run-dashboard.sh  run-maintenance-worker.sh  start-dashboard.sh  start-maintenance-worker.sh  stop-dashboard.sh  stop-maintenance-worker.sh
dashboard/src/triposplat_dashboard/: __init__.py  cli.py  db.py  maintenance_queue.py  media.py  privacy.py  privacy_v2.py  server.py  server_v2.py  timeline.py
dashboard/static/: dashboard-private.js  dashboard.css  dashboard.js  index.html  index_private.html  privacy.css
dashboard/tests/: browser_private_smoke.py  browser_smoke.py
docs/: triposplat_cpu_fusion_reuse_algorithm_review_20260722_ja.md  triposplat_cpu_fusion_reuse_algorithm_review_20260722_summary.json  triposplat_cpu_optimization_future_work_20260721_ja.md  triposplat_cpu_p0_p1_validation_20260722.json  triposplat_cpu_p0_p1_validation_20260722_ja.md  triposplat_full_cpu_low_resource_milestones_20260719_ja.md  triposplat_high_memory_native_f32_audit_20260723_ja.md  triposplat_high_memory_native_f32_audit_20260723_summary.json  triposplat_model_pipeline_math_analysis_ja.md  triposplat_model_structure_ja.md  triposplat_native_avx512_complete_flow_validation_20260720_ja.md  triposplat_native_avx512_q8_s20_validation_20260720_ja.md  triposplat_nf24_i16_q8t512_s20_validation_20260721_ja.md  (+12 more)
scripts/: build_all.sh  (+123 more)
(+1 files in other folders)
